# magpie-python

./: .gitignore  D01_coeffs.m  D12_coeffs.m  PlateFreqsElastic1.m  README.md  abstract.md  bhcoefs.m  biharmonicEigs.m  computeModes.m  dist.md  pyproject.toml  requirements.txt  setup.py  test_module.py  youngcalc.m
docs/: conf.py
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
magpie/: D11_coeffs.py  __init__.py  bhmat.py  magpie.py  magpie_chladni.ipynb  modal_time_integration.py  youngcalc.py
magpie/data/: material_properties.csv
matlab/: ElasticConstantEstimation.m  PlateFreqsElasticFilm.m  bhmat.m
src/: D00_coeffs.m  D10_coeffs.m  D11_coeffs.m  D12_coeffs.m  D20_coeffs.m  D21_coeffs.m  D22_coeffs.m  PlateFreqsElastic1.m  testModal.m
src/data/: material_properties.csv
src/matlab/: D02_coeffs.m  D11_coeffs.m  D20_coeffs.m  D21_coeffs.m  ModalTimeInt.m  bhmat.m  biharmonicEigs.m  computeModes.m  fidimat.m  magpie.m  testModal.m  youngcalc.m
src/matlab/py/: D00_coeffs.py  D01_coeffs.py  D20_coeffs.py  D22_coeffs.py  bhmat.py  magpie.py
src/py/: D00_coeffs.py  D10_coeffs.py  D22_coeffs.py  bhmat.py  magpie.py  magpie_chladni.ipynb  modal_time_integration.py  youngcalc.py
src/py/Dxx_coeffs/: D00_coeffs.py  D02_coeffs.py  D12_coeffs.py  D21_coeffs.py
