[project]
name = "nemus_magpie_mhamilt"
version = "0.0.1"
authors = [
  { name="NEMUS", email="michele.ducceschi@unibo.it" },
]
description = "An open source framework for working with thin plates under generalized elastic boundary conditions"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
        "numpy",
        "scipy",
        "matplotlib",
        "sounddevice",
    ]

[project.urls]
Homepage = "https://github.com/nemus-Project/magpie-python"
Issues = "https://github.com/nemus-Project/magpie-python/issues"